--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
     />
     <link rel="stylesheet" href="assets/stylesheet/reset.css" />
     <link rel="stylesheet" href="assets/stylesheet/style.css" />
+    <link rel="stylesheet" href="assets/stylesheet/action.css" />
+    <link rel="stylesheet" href="assets/stylesheet/responce.css" />
   </head>
   <body>
     <main>
-      <img src="assets/img/Vector.svg" alt="logo" class="logo" />
+      <section class="logo">
+        <img src="assets/img/Vector.svg" alt="logo" class="logo" />
+        <!-- <h1>Enigma</h1> -->
+      </section>
       <section class="action">
         <textarea
           id="cript"
